fixed the animation image being too small

--- a/src/css/mountain-animation.css
+++ b/src/css/mountain-animation.css
@@ -38,9 +38,9 @@
   transform: scale(1.0, 1.0);
   transform: translateZ(0);
   background: #1B2030 url(https://images.unsplash.com/photo-1571993142257-eae0b44cf0f1?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ) 50% 0 no-repeat;
-  background-size: 100%;
+  background-size: 200vmax;
   background-attachment: fixed;
-  animation: grow 140s linear 10ms infinite;
+  animation: grow 190s linear 10ms infinite;
   transition: all 0.4s ease-in-out;
   z-index: -2
 }
